--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,20 +5,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_height="300dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/imageviewback"
+        />
 
     <TextView
         android:id="@+id/text_display"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/image_view"
-        android:text="Display Detected Text from image"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/imageviewback"
+        android:fontFamily="@font/coiny"
+        android:text=""
+        android:visibility="gone"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         android:textSize="26sp"
         />
 
@@ -33,6 +47,8 @@
         android:textColor="@android:color/white"
         android:textSize="17sp"
         android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         />
 
     <Button
@@ -45,6 +61,9 @@
         android:background="@color/colorPrimaryDark"
         android:textColor="@android:color/white"
         android:textSize="17sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="20dp"
         />
 
 </RelativeLayout>
