--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#0a97b0</color>
+    <color name="colorPrimaryDark">#1b6ca8</color>
+    <color name="colorAccent">#e79cc2</color>
+    <color name="background">#fce8d5</color>
 </resources>
